[package]
name = "howto_version"
version = "1.2.3"
authors = ["Yann <yann@fery.me>"]
edition = "2018"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
datetime = "0.4.7"
rustc_tools_util = "0.2"
